@@ -25,8 +25,8 @@
 		ControlCssClass="required"
 		OnServerValidate="validate_text1">
 		<prop:ClientSide
-			OnError="$('status').innerHTML='Error '+(new Date())"
-			OnSuccess="$('status').innerHTML='Success '+(new Date())"
+			OnValidationError="$('status').innerHTML='Error '+(new Date())"
+			OnValidationSuccess="$('status').innerHTML='Success '+(new Date())"
 			OnLoading="Element.show('loader')"
 			OnComplete="Element.hide('loader')" />
 	</com:TActiveCustomValidator>
