@@ -10,6 +10,9 @@ NEW: TSessionPageStatePersister (Qiang)
 NEW: SQLMap (Wei)
 NEW: TFeedService, TRssFeedDocument (Knut, Qiang)
 NEW: TJsonService
+CHG: All validators ClientSide.OnSuccess becomes ClientSide.OnValidationSuccess, and OnSuccess event becomes OnValidationSuccess. (Wei)
+CHG: All validators ClientSide.OnError becomes ClientSide.OnValidationError, and OnError event becomes OnValidationError. (Wei)
+
 
 Version 3.0.5 October 8, 2006
 ===============================
